--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "tail": "tailwindcss -i ./tailwind.css -o ./public/style.css --watch"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
@@ -26,5 +26,9 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "tailwind.config.js",
+  "author": "",
+  "license": "ISC"
 }
