--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tail": "tailwindcss -i ./tailwind.css -o ./public/style.css --watch"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
