--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^9.1.3"
